# diegoquintanav.github.io

./: .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  CNAME  Dockerfile  Gemfile  Makefile  README.md  _config.yml  about.md  archives.html  authors.html  bak.gitmodules  categories.html  docker-compose.dev.yml  docker-compose.yml  dq-de-mission-01-EN.html  dq-de-mission-01.html  dumping-postgres-db-with-docker.html  example.env  flask-contexts.html  folium-barcelona-EN.html  hug-a-rock.html  index.html  index2.html  on-jekyll-EN.html  on-jekyll-ES.html  on-jekyll.html  pelicanconf.py  pinochet-neo4j.html  publish.sh  publishconf.py  pyproject.toml  recsys-1-ES.html  recsys-1.html  recsys-2-EN.html  recsys-2-ES.html  recsys-2.html  (+10 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.trunk/: trunk.yaml
_drafts/: 2017-10-28-sysrec-2.md  2017-10-28-sysrec-3.md  2017-11-05-sysrec-3.md  2017-11-05-sysrec-4.md  clase_15_11.md  clase_8_11.md  on-blockchain.md
_includes/: disclaimer.html  footer.html  google-analytics.html  head.html  share-bar.html  share-page.html
_layouts/: post.html
_posts/: 2017-10-26-on-jekyll.markdown  2017-10-26-welcome-to-jekyll.markdown  2017-10-28-sysrec-1.md  (+6 more)
project/: LICENSE  pelicanconf.py  publish.sh  publishconf.py  pyproject.toml  tasks.py
project/content/blog/: 01_sysrec-1.md  02_sysrec-2.md  03_sysrec-3.md  09_using_folium_shapely.ipynb  10_hug_a_rock.md  starting-with-R.md
project/content/code/docker-backups/: backup-script.sh
project/content/pages/: about.md  now.md
(+179 files in other folders)
