[tool.poetry]
authors = ["Diego Quintana <daquintanav@gmail.com>"]
description = "diegoquintanav.github.io blog built with Pelican"
name = "diegoquintanav-github-io"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pelican = "^4.8.0"
python = "^3.8.1,<4.0"
markdown = "^3.4.1"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.6.3"
pelican-jupyter = "^0.10.1"
pelican-render-math = "^1.0.3"
jinja2 = "3.0.0"
ipython-genutils = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"
ipython = "^8.8.0"
jupyter = "^1.0.0"
black = "^24.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
ruff = "^0.0.284"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
